git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@943 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -73,7 +73,7 @@
 
 										</ul>
 									</li>
-
+									
 									<li class="accessible">
 										<a href="#" class="accessible">Facturaci&oacute;n &raquo;</a>
 										<ul>
@@ -82,7 +82,11 @@
 
 												<ul>
 													<li class="topline"><a href="../prefacturas/startup.agnux">Facturaci&oacute;n</a></li>
-													<li class="topline"><a href="../facturas/startup.agnux">Consulta Cancelaci&oacute;n</a></li>
+													<li class="topline"><a href="../facconsultas/startup.agnux">Consulta</a></li>
+													<li class="topline"><a href="../faccancelacion/startup.agnux">Cancelaci&oacute;n</a></li>
+													
+													<!--<li class="topline"><a href="../facturas/startup.agnux">Consulta Cancelaci&oacute;n</a></li>-->
+													
 													<li class="topline"><a href="../facdevoluciones/startup.agnux">Devoluci&oacute;n</a></li>
 													<li class="topline"><a href="../remisiones/startup.agnux">Remisiones</a></li>
 													<!--
