--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -350,6 +350,8 @@
 													<li class="topline"><a href="../invordpresuben/startup.agnux">Orden de Producci&oacute;n</a></li>
 													<li class="topline"><a href="../invordsubensamble/startup.agnux">Producci&oacute;n de Subensamble</a></li>
 													<!--
+
+													
 													<li class="topline"><a href="../invordendev/startup.agnux">Orden de Devoluci&oacute;n</a></li>
 													-->
 													<!--
@@ -552,15 +554,16 @@
 									<li class="accessible">
 										<a href="http://jdsharp.us" class="accessible">Producci&oacute;n &raquo;</a>
 										<ul>
-
+											
 											<li>
 												<a href="#" class="sub">Cat&aacute;logos &raquo;</a>
 												<ul>
+													<li><a href="../proequiposadic/startup.agnux">Equipos Adicionales</a></li>
 													<li><a href="../protipoequipo/startup.agnux">Tipos de Equipo</a></li>
 													<li><a href="../proinstrumentosmedicion/startup.agnux">Instrumentos de Medici&oacute;n</a></li>
 												</ul>
 											</li>
-
+											
 											<li>
 												<a href="#" class="sub">Procesos &raquo;</a>
 												<ul>
